# lm_tournament_eval

./: .gitignore  README.md  example_elos.csv  pyproject.toml
lm_tournament_eval/: __main__.py  evaluator_utils.py  tournament_evaluator.py
lm_tournament_eval/api/: elo.py  filter.py  group.py  huggingface_model.py  instance.py  match.py  match_scheduler.py  metrics.py  model.py  model_utils.py  offline_match_scheduler.py  offline_results.md  offline_tournament.py  registry.py  samplers.py  task.py  task_utils.py  tournament.py
lm_tournament_eval/caching/: cache.py
lm_tournament_eval/filters/: __init__.py  extraction.py  selection.py  transformation.py
lm_tournament_eval/loggers/: evaluation_tracker.py  utils.py
lm_tournament_eval/models/: __init__.py  huggingface_model.py
lm_tournament_eval/prompts/: __init__.py
lm_tournament_eval/tasks/: __init__.py
